--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.ictakwebsite.com</groupId>
-  <artifactId>ictakwebsite</artifactId>
+  <groupId>com.ictakproject.website</groupId>
+  <artifactId>Ictakmavenproject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-	  <dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-java</artifactId>
-    <version>4.15.0</version>
-</dependency>
-<dependency>
+<dependencies>
+	<dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>7.7.1</version>
+    <version>7.8.0</version>
     <scope>test</scope>
+	</dependency>
+	<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.16.1</version>
+</dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.6.1</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.directory.studio</groupId>
+    <artifactId>org.apache.commons.io</artifactId>
+    <version>2.4</version>
 </dependency>
 
-	  
-	  
-	  
-	  
-  </dependencies>
+
+</dependencies>
 </project>
